--- a/css/style.css
+++ b/css/style.css
@@ -199,11 +199,14 @@ margin-right: 30px;
 /* --  hero -- */
 .hero {
   background: var(--color-backgroutd);
+  background-position: center;
+  background-size: cover;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/bg-hero.jpg);
+
   text-transform: uppercase;
   text-align: center;
   padding: 200px 0;
